# tekimax-ML-Model-workshop

./: .gitignore  LICENSE  Modelfile  README.md  pyproject.toml
docs/: 00-introduction.md  01-environment-setup.md  02-the-dataset.md  03-tokenization-and-formatting.md  04-loading-the-model.md  05-training-configuration.md  06-training.md  07-evaluation-and-testing.md  08-quantization.md  09-hosting-hf-and-ollama.md  10-capstone-network-anomaly-detection.md  11-appendix-troubleshooting.md
model_card/: README.md  README_GGUF.md  README_OLLAMA.md
notebooks/: capstone_network_anomaly_detection.ipynb
scripts/: quantize_gguf.sh
space/: README.md  app.py  requirements.txt
src/: chat.py  prepare_data.py  train.py  watch_training.py
