[project]
name = "tekimax-ml-model-workshop"
version = "0.1.0"
description = "Fine-tune IBM Granite 3.1 1B into a Python/ML coding assistant on Apple Silicon, then quantize to GGUF and host on the Hugging Face Hub."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Core training stack. Pinned to versions that ship Granite support and the
    # `dtype=` AutoModel argument used in the Trainer tutorial.
    "torch>=2.4",
    "transformers>=4.56",
    "datasets>=2.20",
    "accelerate>=0.34",
    "huggingface_hub>=0.25",
    # Nice-to-haves for progress + plotting eval curves.
    "tqdm>=4.66",
]

[project.optional-dependencies]
# Quantization to MLX (Apple-Silicon-native) is optional; GGUF via llama.cpp
# is handled by scripts/quantize_gguf.sh and needs no Python deps here.
mlx = [
    "mlx-lm>=0.18",
]
# Capstone notebook (Chapter 10): build a DL network-anomaly detector in Jupyter.
capstone = [
    "jupyterlab>=4.0",
    "tensorflow>=2.16",
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "requests>=2.31",
]

[tool.uv]
# Use the CPU/MPS PyTorch wheels (default index already serves arm64 macOS wheels).
package = false
